# speech_dicts

./: README.md  notes.ipynb  pyproject.toml
